# RPG

./: .gitignore  CombatManager.py  Config.py  Entity.py  EventManager.py  Goblin.py  Monster.py  Player.py  README.md  config.yaml  logger.py  main.py  pyproject.toml  requirements.txt  setup_rpg.py  test.py
.tmp.driveupload/: 19346  19350  19354  19358  19362  19366  19370  19372  19376  19380  19382  19386  19390  19394  19398  19402
Actions/: Action.py  AttackAction.py  NoneAction.py  SummonEntityAction.py
actions_temp/: Action.py  AttackAction.py  SummonEntityAction.py
capabilities/: Talkable.py
combat/: CombatController.py  CombatManager.py
core/: Game.py  GameContext.py  GameController.py  TimeManager.py
data/dialogues/: Maruen.json
dialogue/: Dialogue.py  DialogueManager.py
entities/: Entity.py  Goblin.py  Human.py  Monster.py  Player.py
events/: Event.py  MapDialogueEvent.py  MapFightEvent.py
old_rpg/: .gitignore  EventManager.py  main.py  test.py
old_rpg/combat/: CombatManager.py
old_rpg/core/: Journal.py  TimeManager.py
old_rpg/entities/: Entity.py
old_rpg/utils/: ui.py
old_rpg/world/: Weather.py  WorldState.py
src/rpg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/scripts/: eventbus_demo.py  eventbus_scopes.py  eventbus_unsubscribe.py  scheduler_demo.py  scheduler_more.py  time_demo.py
tui/: CursesMain.py  style.css
tui/interface/: BaseContext.py  (+3 more)
utils/: InputManager.py  debug.py  ui.py
world/: Area.py  Dialogue.py  DialogueManager.py  EntityPath.py  Events.py  Path.py  PlayerPath.py  Weather.py  WorldState.py
(+14 files in other folders)
