[project]
name = "rpg"
version = "0.1.0"
requires-python = ">=3.11"
description = "Minimal RPG starter"
readme = "README.md"
dependencies = ["textual>=0.58.0"]


[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","N","UP","B","SIM","PL"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
mypy_path = ["src"]
